# envel

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.org
include/envel/: envel.hh
scripts/: configure-release  test
src/: CMakeLists.txt  envel.cc  gen-envel.cc
tests/: CMakeLists.txt  envel_test.cc
